--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -9,39 +9,18 @@
     </div>
 </div>
 <div class="row">
-  <div class="sample-menu-style dropdown-menu-content">
-    <span tabindex="0" onclick="return true">Click Me!</span>
-    <div tabindex="0" onclick="return true"></div>
-    <ul>
-      <li><a href="#" onclick="sampleMenu(this)">Item 1</a></li>
-      <li><a href="#" onclick="sampleMenu(this)">Item 2</a></li>
-      <li><a href="#" onclick="sampleMenu(this)">Last Item</a></li>
-    </ul>
-  </div>
+ 
     <div class="col-xs-12">
-        <!-- <div class="dropdown" >
-            <button
-            type="button"
-            class="btn btn-primary dropdown-toggle">
-            Manage Recipe <span class="caret"></span>
-            <ul class="dropdown-menu">
-               <li><a href="#">To Shopping List</a></li>
-               <li><a href="#">Edit Recipe</a></li>
-               <li><a href="#">Delete Recipe</a></li>
-            </ul>
-            </button>
-        </div> -->
-
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown button 1
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+        <div class="sample-menu-style dropdown-menu-content">
+            <span tabindex="0" class="btn btn-primary" onclick="return true">Manage Recipe  </span>
+            <div tabindex="0" onclick="return true"></div>
+            <ul>
+                       <li><a (click)="onAddToShoppingList()"  style="cursor: pointer;" >To Shopping List</a></li>
+                       <li><a style="cursor: pointer;" (click)="onEdit()"  >Edit Recipe</a></li>
+                       <li><a  style="cursor: pointer;" >Delete Recipe</a></li>
             </ul>
           </div>
+
     </div>
 </div>
 <div class="row">
@@ -51,6 +30,10 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        Ingredient
+       <ul class="list-group">
+           <li *ngFor="let ingredient of recipe.ingredients" class="list-group-item">
+               {{ingredient.name}} - {{ingredient.amount}}
+           </li>
+       </ul>
     </div>
 </div>
