--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
+        <form (ngSubmit)="onAddItem(f)" #f="ngForm" >
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
@@ -8,7 +8,9 @@
                       name="name"
                       id="name" 
                       class="form-control"
-                      #nameInput>
+                      ngModel
+                      required
+                     >
                 </div>
                 <div class="col-sm-4 form-group">
                     <label for="name">Amount</label>
@@ -16,14 +18,26 @@
                      name="amount" 
                      id="amount"
                      class="form-control"
-                     #amountInput>
+                     ngModel
+                     required
+                     pattern="^[1-9]+[0-9]*$"
+                     >
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success" type="submit" (click)="onAddItem()">Add</button>
-                    <button class="btn btn-danger"  type="button" >Delete</button>
-                    <button class="btn btn-primary" type="reset" >Clear</button>
+                    <button class="btn btn-success" 
+                    type="submit" 
+                    [disabled]="!f.valid">{{ editMode ? 'Update' : 'Add' }}</button>
+                    <button class="btn btn-danger" 
+                     type="button"
+                     (click)="onDelete()"
+                     *ngIf="editMode"
+                      >Delete</button>
+                    <button class="btn btn-primary"
+                     type="reset" 
+                     (click)="onClear()"
+                     >Clear</button>
                 </div>
             </div>
         </form>
